# claude-hack

./: .gitignore  README.md  app.js  index.html  styles.css
data/: umd_live_resources.json
imessage_agent/: __init__.py  sendblue_adapter.py  sendblue_service.py  service.py
scripts/: ingest_umd_live.py
server/: __init__.py  config.py  main.py  pyproject.toml  schema.sql  storage.py  umd_kb_seed.md
server/chat/: __init__.py  agent.py
server/scrapers/: __init__.py  agent.py  local_kb.py  umd_live.py
server/user_context/: __init__.py  service.py
src/: copilot.js  live-resources.js
