[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellmate-server"
version = "0.1.0"
description = "ShellMate - Campus Helping buddy for UMD"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "openai>=1.58.0",
  "openai-agents>=0.0.14",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
